feat: ajustando sistema
