# src/domain/models/index.ts
@@ -34,7 +34,7 @@ export * from "./getMeioPagamentoResponse";
 export * from "./getMeiosPagamentosResponse";
 export * from "./getPessoaResponse";
 export * from "./getPessoasResponse";
-export * from "./getRelatoriosResponse";
+export * from "./getRelatorioTransacoesResponse";
 export * from "./getResumoFinanceiro";
 export * from "./getResumoFinanceiroResponse";
 export * from "./getTransacaoResponse";
@@ -48,8 +48,8 @@ export * from "./pessoa";
 export * from "./pessoaPaginatedData";
 export * from "./receitaPorMes";
 export * from "./registerRequest";
-export * from "./relatoriosPaginatedData";
-export * from "./relatoriosResponse";
+export * from "./relatorioTransacoesResponse";
+export * from "./relatorioTrasacoesPaginatedData";
 export * from "./transacao";
 export * from "./transacaoPaginatedData";
 export * from "./transacaoResponse";
